Botones para volver a inicio.

--- a/app/_wing-watch-core/components/editarUsuario/editarUsuarioView.html
+++ b/app/_wing-watch-core/components/editarUsuario/editarUsuarioView.html
@@ -1,5 +1,10 @@
 <div class="ui two column centered grid" ng-controller="editarUsuarioCtrl">
     <!-- <div class="column"></div> -->
+    <div class="encima">
+        <div class="ui circular icon button" ng-click="goHome()">
+            <i class="big home icon"></i>
+        </div>    
+    </div>
     <div class="column">
         <div class="ui segment">
             <form class="ui form editarPerfil">
