--- a/app/_wing-watch-core/components/registerBird/registerBirdView.html
+++ b/app/_wing-watch-core/components/registerBird/registerBirdView.html
@@ -1,5 +1,11 @@
 <title>Registrar Álbum</title>
 <div id="mainWrap" class="container" ng-controller="registerBirdCtrl">
+<div class="encima">
+    <div class="ui circular icon button" ng-click="goHome()">
+        <i class="big home icon"></i>
+    </div>    
+</div>
+
 <div class="ui two column centered padded grid">
     <div class="column">
         <div class="ui bottom attached segment">
