--- a/app/_wing-watch-core/components/users/usersView.html
+++ b/app/_wing-watch-core/components/users/usersView.html
@@ -8,6 +8,11 @@
             </div>
             <img src="assets/img/iconPerson.png">
             </h1>
+            <div class="encima">
+                <div class="ui circular icon button" ng-click="goHome()">
+                    <i class="big home icon"></i>
+                </div>    
+            </div>
         </div>
         <div class="ui segment">
             <h3 class="ui dividing header">
