--- a/app/_wing-watch-core/components/registerBird/registerBirdView.html
+++ b/app/_wing-watch-core/components/registerBird/registerBirdView.html
@@ -192,7 +192,7 @@
         <div class="ui black cancel button">
             Cancelar
         </div>
-        <div class="ui yellow ok right labeled icon button">
+        <div class="ui yellow right labeled icon button" ng-click="guardarCambioFoto()">
             Guardar Cambios
             <i class="checkmark icon"></i>
         </div>
